@@ -31,7 +31,7 @@
 # are used when there are no perfect matches to determine which OS
 # fingerprint matches a target machine most closely.
 MatchPoints
-SEQ(SP=30%GCD=50%ISR=30%TI=100%II=100%TS=100)
+SEQ(SP=30%GCD=75%ISR=30%TI=100%II=100%SS=80%TS=100)
 OPS(O1=20%O2=20%O3=20%O4=20%O5=20%O6=20)
 WIN(W1=15%W2=15%W3=15%W4=15%W5=15%W6=15)
 ECN(R=100%DF=20%T=20%TG=20%W=15%O=15%CC=100%Q=20)
@@ -42,8 +42,8 @@ T4(R=100%DF=20%T=20%TG=20%W=30%S=20%A=20%F=30%O=10%RD=20%Q=20)
 T5(R=100%DF=20%T=20%TG=20%W=30%S=20%A=20%F=30%O=10%RD=20%Q=20)
 T6(R=100%DF=20%T=20%TG=20%W=30%S=20%A=20%F=30%O=10%RD=20%Q=20)
 T7(R=100%DF=20%T=20%TG=20%W=30%S=20%A=20%F=30%O=10%RD=20%Q=20)
-U1(DF=20%T=20%TG=20%TOS=100%IPL=100%UN=100%RIPL=100%RID=100%RIPCK=100%RUCK=100%RUL=100%RUD=100)
-IE(DFI=40%T=20%TG=20%TOSI=100%CD=100%SI=100%DLI=100)
+U1(R=50%DF=20%T=20%TG=20%TOS=100%IPL=100%UN=100%RIPL=100%RID=100%RIPCK=100%RUCK=100%RUL=100%RUD=100)
+IE(R=50%DFI=40%T=20%TG=20%TOSI=100%CD=100%SI=100%DLI=100)
 
 #  Device type: switch.   Running: 3Com embedded.  
 # OS details: 3Com Superstack 3, 3300XM switch , Boot PROM Version:  1.00, Software Version:  2.69, Hardware Version:  0
